Fix layout issues

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ h3 { font-size: var(--fs-h3);}
     left: -1.5rem;
     width: calc(100% + 1.5em);
   }
+
 }
 
 /* My Services Section */
@@ -455,10 +456,23 @@ h3 { font-size: var(--fs-h3);}
   margin-right: auto;
 }
 
-.portfolio-item-individual__button-container { 
-  position: relative;
+.portfolio-item-individual__btn-container {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 400px) {
+  .portfolio-item-individual__btn-container { 
+    flex-direction: row;
+  }
+}
+
+.portfolio-item-individual__btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2em;
+  gap: 1rem;
 }
